@@ -1,13 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD pager-0.ebuild 778 RMD160 269bb6b3c436f56b39664b97c380b6c92b6b1203 SHA1 cbc984559d8630f39a185705554fa3eeabf65e35 SHA256 7299062f430ac81840fe913848b9c7bde2d0440a72447d61b7adfe2b30593892
-MISC ChangeLog 1155 RMD160 c9535e9234ccf57667dfa0c19298fe66d587dad6 SHA1 2e5565310b4328ede26598d4a6c5e429d36fbaf6 SHA256 1747a006ac499737598113644d3c24ff820d49a657ce470c6249e4fef4cd3dc5
+EBUILD pager-0.ebuild 763 RMD160 57ccc02157c0cb0520229765ef2ed83cf9dac7c4 SHA1 134a3ac1ea8d419725491dd27071307871e87a25 SHA256 f0b481609598ae54b7155e9afd5a07b6a9c99cc9df291136ce9cabfa0fc6eed4
+MISC ChangeLog 1338 RMD160 99e136408b9551f760fa3e40aa7397f5b30fcc43 SHA1 04de1c90a49c7015da97edaa4a198c81ea60a12f SHA256 4470679fb653fb96e53d1a3b94a50ba74fecf024631be7a80f297dc3ebb07cee
 MISC metadata.xml 240 RMD160 3c35fa184b36b6c9183516c00fb1cddbce35a2cf SHA1 54a3bfdf178d2ef4d65e87c22aa5fbc0d26f9735 SHA256 c85b75948508f1f2d40d4d2cacee4622b08ce6ac78dfa3176dd005cc45f8eceb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7BluMACgkQNQqtfCuFneOQ8wCglHB5T/xFXlJyfIVccVHzRjVf
-xaEAnAm7o0CgPjB9wnkAgFjRvYq3RKK+
-=WsGV
+iQIcBAEBAgAGBQJPDIxYAAoJEDxpGckxwJCBEo4P/2JeKEmh6/mN15JL35gVgs7y
+6XT2Q/KXoLoasnsiykjr/D9pq3iOAypS3zzpdJBCLxnBEho1+xqnr+G9IU8HAYPF
+FrvrKMJDa7PhOcY8A5AepVa26J2SSKWOUZDcpL0G7CxPl6R31Baho1+Ji5pjZ/0Z
+r43z968Y7xoWRzEYjX6nRsPpDNmRmnHqFMew+DjSQrLB/Cz8wL3nG65G80YKNBQQ
+5/7Mz/Ua+ymm/FtBdiic3LtQNvVFayBQniq+Px/GFVK5bEUH6Etcl0qdEbaXAKCQ
+coP8utLEyIxKZuVovc99MnwFMCws9/BlwTi+oGGqapM6JCF1md+ZKZO2ExerKbow
+K2HiftIlKs7NKYCh+A6gOsduC6d1dfJCIA7hyBVOy5ZBjcnOA1/I7A+20j2muauX
+wPKAOxlxV6+5VVpwjnZkk3I36zXYw+HY2jgXmc7mxSDzyeIl636CYOeVs6Ol8tju
+nbJRepF3QxevK5tBYorvpE8X4Ta2tpwTy6L2SrRDJqHbSkzDd1scZ++DNjvjAecQ
+HSXmv6WZOfYeokLYI1Z0T/gPaOd4gMPUrwH/Nkkogwo2Orm2JE6M2bqKKaqZ9cXA
+JxADaYivTv51qAhBDyWIXILEs2vrirIapQsLmL8z3GELchG15jrmwLZ1G0m+quPy
+jj/m0hRMUEdhWBlfuH1V
+=JCgt
 -----END PGP SIGNATURE-----
