@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/pager/pager-0.ebuild,v 1.6 2011/11/14 22:31:48 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/pager/pager-0.ebuild,v 1.7 2012/01/10 19:06:52 ulm Exp $
 
 EAPI=3
 
@@ -17,6 +17,6 @@ DEPEND=""
 RDEPEND="|| ( sys-apps/less
 	sys-apps/more
 	sys-apps/most
-	!prefix? ( sys-apps/util-linux[ncurses] )
+	sys-apps/util-linux[ncurses]
 	app-text/lv
 	app-editors/vim[vim-pager] )"
